other-cel/check-env-vars/.chainsaw-test/podcontrollers-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        env:
        - name: DISABLE_OPA
          value: "true"
        - name: foo
          value: bar
      - name: busybox02
        image: busybox:1.35
        env:
        - name: foo
          value: bar
        - name: DISABLE_OPA
          value: "true"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: busybox:1.35
            env:
            - name: DISABLE_OPA
              value: "true"
            - name: foo
              value: bar
          - name: busybox02
            image: busybox:1.35
            env:
            - name: foo
              value: bar
            - name: DISABLE_OPA
              value: "true"
          restartPolicy: OnFailure
