other-cel/check-env-vars/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-env-vars
status:
  ready: true
